--- a/Array and Arrow functions3rd June 2022/date.html
+++ b/Array and Arrow functions3rd June 2022/date.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Date</title>
 </head>
 <body>
-    <form>
+     <form>
         <label>Enter the date in mm/dd/yyyy format</label>
-        <input type="text" id="x">
-        <input type="submit" value="Submit" onclick="click()">
-      </form>
+        <input type="text" id="ip">
+        <input type="submit" value="Submit" onclick="checkd()">
+    </form>
 
 <script>
     function isDate(str)
     {
-        const regexp=/^(1[0-2]|0?[1-9])\/(3[01]|[12][0-9]|0?[1-9])\/(?:[0-9]{2})?[0-9]{2}$/;
+        const regexp = /^(1[0-2]|0?[1-9])\/(3[01]|[12][0-9]|0?[1-9])\/(?:[0-9]{2})?[0-9]{2}$/;
         if(regexp.test(str))
         {
             alert(true);
@@ -27,12 +27,11 @@
         }
     }
 
-    function click()
+    function checkd()
     {
-        var str=document.getElementById("x").value;
+        var str = document.getElementById("ip").value;
         isDate(str);
     }
-
-</script>
-    </body>
+    </script>
+</body>
 </html>
